# book_parser

./: Dockerfile  README.md  cron  pyproject.toml
book-parser/app/scraper/: helper.py  main.py
book-parser/results/: books.json
book-parser/scraper/: helper.py  main.py
